--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="app_name">CameraV</string>
   <string name="photo">Foto</string>
   <string name="video">Vídeo</string>
   <string name="menu_all_media">Todos el material multimedia</string>
@@ -15,6 +16,7 @@
   <string name="get_in">Entrar En</string>
   <string name="we_could_not_log">No hemos podido conectarte. Por favor, inténtalo de nuevo.</string>
   <string name="change_settings"><u>Editar configuración</u></string>
+  <string name="save"><u>Guardar</u></string>
   <string name="cancel"><u>Cancelar</u></string>
   <string name="log_out">Desconectarse</string>
   <string name="no_notifications">No hay notificaciones.</string>
@@ -27,6 +29,7 @@
   <string name="swipe_left_for_cameras">Arrastra hacia la izquierda para las cámaras.</string>
   <string name="all_media">Todos el material multimedia</string>
   <string name="share">Compartir</string>
+  <string name="share_secure">Compartición segura</string>
   <string name="add_a_quick_note">Añadir una nota rápida \u2026</string>
   <string name="untitled">Sin título</string>
   <string name="x_tags">%1$d Etiqueta%2$s</string>
@@ -45,6 +48,7 @@
   <string name="send_message">Enviar mensaje\u2026</string>
   <string name="notes">Notas</string>
   <string name="delete_tag">Eliminar etiqueta</string>
+  <string name="delete_audio_note">Borrar nota de audio</string>
   <string name="unverified">Sin verificar</string>
   <string name="verified">Verificado</string>
   <string name="pull_down_to_wipe">Presionar botón desplegable para eliminar su contenido</string>
@@ -54,7 +58,21 @@
   <string name="resume">Reanudar</string>
   <string name="redo">Rehacer</string>
   <string name="play">Reproducir</string>
+  <string name="resend_credentials">Reenviar mis credenciales \u2026</string>
+  <string name="retry">Reintentar</string>
+  <string name="your_media_is_being_encoded">Su audiovisual se está procesando...</string>
+  <string name="login_open">Abrir</string>
+  <string name="login_passphrase">Frase-contraseña</string>
   <string name="preferences">Preferencias</string>
+  <string name="original_images_should_be">Las fotos capturadas y el vídeo debe almacenarse en:</string>
+  <string name="prefs_images_deleted">Almacenamiento cifrado (más lento)</string>
+  <string name="prefs_images_saved">Almacenamiento estándar (más rápido)</string>
+  <string name="prefs_lock_screen">Bloquear pantalla</string>
+  <string name="prefs_lock_screen_on">Activo</string>
+  <string name="prefs_lock_screen_off">Inactivo</string>
+  <string name="prefs_panic">Acción Pánico</string>
+  <string name="prefs_panic_wipe_app">Borrar la aplicación al completo</string>
+  <string name="prefs_panic_wipe_content">Borrar mi contenido</string>
   <string name="prefs_language_title">Idioma</string>
   <string name="pref_languages_default">Predeterminado del sistema</string>
   <string name="pref_languages_en_us">Inglés (EEUU)</string>
@@ -66,4 +84,78 @@
   <string name="pref_languages_pt_PT">Portugués (Portugal)</string>
   <string name="pref_languages_si_LK">Cingalés (Sri Lanka)</string>
   <string name="pref_languages_tr_TR">Turco (Turquía)</string>
+  <string name="menu_share">Compartir</string>
+  <string name="menu_share_media">Compartir audiovisual</string>
+  <string name="menu_share_meta">Compartir metadatos</string>
+  <string name="menu_share_meta_j3m">Compartir formato J3M JSON</string>
+  <string name="menu_share_meta_csv">Compartir formato CSV</string>
+  <string name="menu_edit">Editar</string>
+  <string name="menu_done">Hecho</string>
+  <string name="menu_save">Guardar</string>
+  <string name="menu_view">Ver</string>
+  <string name="menu_select">Seleccionar</string>
+  <string name="menu_panic">Pánico</string>
+  <string name="menu_settings">Configuración</string>
+  <string name="menu_lock">Bloquear aplicación</string>
+  <string name="menu_view_meta">Metadatos</string>
+  <string name="menu_view_charts">Gráficas</string>
+  <string name="menu_share_hash">Certificar</string>
+  <string name="menu_creds">Compartir Credenciales</string>
+  <string name="menu_export_keys">Realizar copia de seguridad de las claves</string>
+  <string name="menu_home_gallery_select_all">Seleccionar todo</string>
+  <string name="menu_remote_access">Acceso remoto</string>
+  <string name="wizard_welcome">¡Bienvenido!</string>
+  <string name="wizard_choose_language">Elija un idioma:</string>
+  <string name="wizard_get_started">Comencemos</string>
+  <string name="wizard_step_1_of_2">Paso 1 de 2:</string>
+  <string name="wizard_create_db">Configure su base de datos segura</string>
+  <string name="wizard_email_optional">Correo electrónico (opcional)</string>
+  <string name="wizard_password_dont_match">Las contraseñas no coinciden =(</string>
+  <string name="wizard_password_wrong_format">Su contraseña debe ser de más de 10 caracteres.</string>
+  <string name="wizard_ok_next">De acuerdo, siguiente</string>
+  <string name="wizard_step_2_of_2">Paso 2 de 2:</string>
+  <string name="wizard_take_photo_title">Tome 6 fotos monótonas (una superficie) para generar su clave de dispositivo.</string>
+  <string name="wizard_key_information">Su clave le permitirá verificarse, de forma que pueda compartir sin obstáculos y de forma segura.</string>
+  <string name="wizard_take_photo">Tomar fotos</string>
+  <string name="wizard_take_photo_take">Tomar</string>
+  <string name="wizard_key_is_being_made">Su clave se está construyendo, esto puede llevar un rato.</string>
+  <string name="wizard_key_made">Su clave ha sido construida.</string>
+  <string name="home_audio_note">NOTA DE AUDIO</string>
+  <string name="home_share">COMPARTIR</string>
+  <string name="home_gallery_title">Galería</string>
+  <string name="home_gallery_selected">%1$d Seleccionada</string>
+  <string name="home_gallery_delete">Borrar</string>
+  <string name="home_gallery_empty">Su galería está vacía.</string>
+  <string name="home_swipe_for_more">Gesto de barrido para ver más</string>
+  <string name="editor_tags_form">Añadir información</string>
+  <string name="editor_tags_add">Añadir etiquetas</string>
+  <string name="editor_form_edit">Información de la etiqueta</string>
+  <string name="editor_write_text">Escribir texto</string>
+  <string name="editor_save_text">GUARDAR TEXTO</string>
+  <string name="editor_history">Historial</string>
+  <string name="editor_image_taken">TOMADA EL %1$s</string>
+  <string name="editor_history_shared">Compartida</string>
+  <string name="editor_history_exported">Compartida de forma segura</string>
+  <string name="audio_saved_saved">Grabación guardada.</string>
+  <string name="audio_saved_info">Las notas de audio son sólo para su referencia, y no se compartirán.</string>
+  <string name="audio_saved_ok">¡DE ACUERDO, GRACIAS!</string>
+  <string name="shared_never">Nunca compartidas</string>
+  <string name="shared_recently">Compartida hace menos de un minuto</string>
+  <string name="shared_minutes">Compartida hace %1$d minutos</string>
+  <string name="shared_minute">Compartida hace %1$d minuto</string>
+  <string name="shared_hours">Compartida hace %1$d horas</string>
+  <string name="shared_hour">Compartida hace %1$d hora</string>
+  <string name="shared_days">Compartida hace %1$d días</string>
+  <string name="shared_day">Compartida hace %1$d día</string>
+  <string name="filter_all">Todos los elementos</string>
+  <string name="filter_photos">Sólo fotos</string>
+  <string name="filter_videos">Sólo vídeos</string>
+  <string name="filter_tagged">Elementos etiquetados</string>
+  <string name="filter_shared">Elementos compartidos</string>
+  <string name="panic_settings">Configuración de Pánico</string>
+  <string name="panic_cancel">Cancelar</string>
+  <string name="panic_hint">Gesto de barrido hacia abajo para borrar la aplicación</string>
+  <string name="panic_hint_wipe_content">Gesto de barrido hacia abajo para borrar datos personales</string>
+  <string name="panic_test_successful">¡Buen trabajo! En un escenario real, habría completado con éxito un barrido.</string>
+  <string name="prefs_gps_highres">Forzar GPS de Alta-Resolución</string>
 </resources>
