--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -30,7 +30,7 @@
 	<string name="all_media">All Media</string>
 	<string name="share">Share</string>
 	<string name="share_secure">Secure Share</string>
-	<string name="add_a_quick_note">Add a quick note \u2026</string>
+	<string name="add_a_quick_note">Add a quick note \u2026</string> 
 	<string name="untitled">Untitled</string>
 	<string name="x_tags">%1$d Tag%2$s</string>
 	<string name="x_messages">%1$d Message%2$s</string>
@@ -223,4 +223,8 @@
     <string name="share_web_address">Share Web Address</string>
     <string name="you_can_access_my_camerav_photos_and_videos_here_">"You can access my CameraV photos and videos here: "</string>
     <string name="gps_accuracy">GPS Accuracy</string>
+
+    <string name="welcome_to_camerav_would_you_like_to_read_the_user_guide_">Welcome to CameraV. Would you like to read the user guide?</string>
+	<string name="menu_guide">View Guide</string>
+	
 </resources>
