--- a/app/res/values-de/strings.xml
+++ b/app/res/values-de/strings.xml
@@ -42,6 +42,7 @@
   <string name="send_encrypted_to_organization">Verschlüsselte an Organisation freigeben\u2026</string>
   <string name="send_encrypted_to_x">Verschlüsselte freigeben an %1$s</string>
   <string name="sending_encrypted_to_x">Verschlüsselte freigegeben an %1$s. (Ändern?)</string>
+  <string name="there_are_no_organizations">Es gibt keine Organisationen an die Sie senden können. Versuchen Sie die Medien stattdessen zu teilen.</string>
   <string name="export_my_credentials">Meine Anmeldedaten exportieren\u2026</string>
   <string name="send_message">Nachricht senden\u2026</string>
   <string name="notes">Anmerkungen</string>
@@ -96,10 +97,12 @@
   <string name="menu_settings">Einstellungen</string>
   <string name="menu_lock">App sperren</string>
   <string name="menu_view_meta">Metadaten</string>
+  <string name="menu_view_charts">Tabellen</string>
   <string name="menu_share_hash">Beglaubigen</string>
   <string name="menu_creds">Anmeldedaten freigeben</string>
+  <string name="menu_export_keys">Schlüssel sichern</string>
   <string name="menu_home_gallery_select_all">Alle auswählen</string>
-  <string name="menu_remote_access">Fernzugriff</string>
+  <string name="menu_remote_access">Entfernte Freigabe</string>
   <string name="wizard_welcome">Willkommen!</string>
   <string name="wizard_choose_language">Wählen Sie eine Sprache aus:</string>
   <string name="wizard_get_started">Erste Schritte</string>
@@ -111,6 +114,7 @@
   <string name="wizard_ok_next">Okay, weiter</string>
   <string name="wizard_step_2_of_2">Schritt 2 von 2:</string>
   <string name="wizard_take_photo_title">Nehmen Sie 6 langweilige Fotos auf, um Ihren Geräteschlüssel zu erzeugen.</string>
+  <string name="wizard_key_information">Ihr Schlüssel erlaubt Ihnen verifiziert zu sein, sodass Sie nahtlos und sicher teilen können</string>
   <string name="wizard_take_photo">Fotografieren</string>
   <string name="wizard_take_photo_take">Aufnehmen</string>
   <string name="wizard_key_is_being_made">Ihr Schlüssel wird erstellt, dies kann eine Weile dauern.</string>
@@ -128,9 +132,11 @@
   <string name="editor_write_text">Text schreiben</string>
   <string name="editor_save_text">TEXT SPEICHERN</string>
   <string name="editor_history">Verlauf</string>
+  <string name="editor_image_taken">AUFGENOMMEN %1$s</string>
   <string name="editor_history_shared">Freigegeben</string>
   <string name="editor_history_exported">Sicher freigegeben</string>
   <string name="audio_saved_saved">Aufnahme gespeichert.</string>
+  <string name="audio_saved_info">Audio-Notizen sind nur für Sie eine Referenz und werden nicht geteilt.</string>
   <string name="audio_saved_ok">OKAY, DANKE!</string>
   <string name="shared_never">Nie freigegeben</string>
   <string name="shared_recently">Vor weniger als eine Minute freigegeben</string>
@@ -143,6 +149,8 @@
   <string name="filter_all">Alle Elemente</string>
   <string name="filter_photos">Nur Fotos</string>
   <string name="filter_videos">Nur Videos</string>
+  <string name="filter_encrypted">Nur verschlüsselte</string>
+  <string name="filter_external">Nur externe</string>
   <string name="filter_tagged">Verschlagwortete Elemente</string>
   <string name="filter_shared">Freigegebene Elemente</string>
   <string name="panic_settings">Panikeinstellungen</string>
@@ -150,17 +158,30 @@
   <string name="panic_hint">Zum Löschen der App nach unten wischen</string>
   <string name="panic_hint_wipe_content">Zum Löschen persönlicher Daten nach unten wischen</string>
   <string name="prefs_gps_highres">Hochauflösenden GPS erzwingen</string>
+  <string name="prefs_gps_highres_summary">Stellen Sie sicher, dass Sie ortsbezogene Daten nur vom aktuellen GPS Netzwerk erhalten</string>
   <string name="prefs_external_camera">Externe Kamera-Apps verwenden</string>
+  <string name="prefs_external_camera_summary">Benutzen Sie nur die nicht verschlüsselten Kamera-Apps und nicht die eingebaute verschlüsselte Kamera.</string>
   <string name="menu_alwayson">Prüfmodus</string>
   <string name="_camerav_notarization_id_">#CameraV Beglaubigung </string>
   <string name="share_from_">Freigabe aus </string>
   <string name="_id_"> Kennung:</string>
-  <string name="prefs_export_local">Verschlüsselte Medien auf Freigabe exportieren</string>
+  <string name="prefs_export_local">Verschlüsselte Medien exportieren</string>
+  <string name="prefs_export_local_summary">Sichern Sie verschlüsselte Medien zuerst auf dem externen Speicher, wenn Sie sie teilen</string>
   <string name="prefs_run_foreground">App im Vordergrund behalten</string>
-  <string name="prefs_stealth_icon">Alternatives Symbol verwenden (\"CV-Einstellungen\")</string>
+  <string name="prefs_run_foreground_summary">Versichert, dass die App nicht heruntergefahren wird, wenn man zu einer anderen App wechselt</string>
+  <string name="prefs_stealth_icon">Alternatives Symbol aktivieren</string>
+  <string name="prefs_stealth_icon_summary">Verstecke CameraV Icon und Name im Launcher, zeige allgemeine \"CV Einstellungen\" stattdessen</string>
+  <string name="prefs_block_screenshots">Bildschirmfotos blockieren</string>
+  <string name="prefs_block_screenshots_summary">Halte andere Apps und das Android System davon ab von dieser App Screenshots zu machen</string>
   <string name="light">Licht</string>
   <string name="air_pressure">Luftdruck</string>
   <string name="orientation">Ausrichtung</string>
   <string name="motion">Bewegung</string>
+  <string name="camerav_hash_service">Verifiziere Hash</string>
   <string name="app_name_alt">CV-Einstellungen</string>
+  <string name="wifi_networks">WiFi-Netzwerke</string>
+  <string name="gps_speed">GPS-Geschwindigkeit</string>
+  <string name="gps_altitude">GPS-Höhe</string>
+  <string name="remote_web_access_enabled_at">Web-Fernzugriff aktiviert bei</string>
+  <string name="remote_web_access_disabled">Web-Fernzugriff deaktiviert</string>
 </resources>
