--- a/app/res/values-en-rUS/strings.xml
+++ b/app/res/values-en-rUS/strings.xml
@@ -103,7 +103,9 @@
   <string name="menu_creds">Share Credentials</string>
   <string name="menu_export_keys">Backup Keys</string>
   <string name="menu_home_gallery_select_all">Select All</string>
-  <string name="menu_remote_access">Remote Access</string>
+  <string name="menu_remote_access">Remote Share</string>
+  <string name="menu_remote_access_tor">Web Sharing</string>
+  <string name="menu_remote_access_dropbox">Dropbox Sync</string>
   <string name="wizard_welcome">Welcome!</string>
   <string name="wizard_choose_language">Choose a language:</string>
   <string name="wizard_get_started">Get started</string>
@@ -150,6 +152,8 @@
   <string name="filter_all">All Items</string>
   <string name="filter_photos">Photos only</string>
   <string name="filter_videos">Videos only</string>
+  <string name="filter_encrypted">Encrypted only</string>
+  <string name="filter_external">External Only</string>
   <string name="filter_tagged">Tagged Items</string>
   <string name="filter_shared">Shared Items</string>
   <string name="panic_settings">Panic Settings</string>
@@ -158,18 +162,38 @@
   <string name="panic_hint_wipe_content">Swipe down to delete personal data</string>
   <string name="panic_test_successful">Good job! In a real scenario, you would have successfully completed a wipe.</string>
   <string name="prefs_gps_highres">Force GPS High-Res</string>
+  <string name="prefs_gps_highres_summary">Ensure you only get location data from the actual GPS satellite network</string>
   <string name="prefs_external_camera">Use External Camera Apps</string>
+  <string name="prefs_external_camera_summary">Use only the unencrypted system cameras apps, and not the built-in encrypted camera</string>
   <string name="menu_alwayson">Proof Mode</string>
   <string name="_camerav_notarization_id_">#CameraV Notarization </string>
   <string name="share_from_">Share from </string>
   <string name="_id_"> ID:</string>
-  <string name="prefs_export_local">Export Encrypted Media on Share</string>
+  <string name="prefs_export_local">Export Encrypted Media</string>
+  <string name="prefs_export_local_summary">Save encrypted media first to external storage when you share them</string>
   <string name="prefs_run_foreground">Keep app in foreground</string>
-  <string name="prefs_stealth_icon">Use Alt Icon (\"CV Settings\")</string>
+  <string name="prefs_run_foreground_summary">Ensures the app is not shutdown when you switch to another app</string>
+  <string name="prefs_stealth_icon">Enable Alternative Icon</string>
+  <string name="prefs_stealth_icon_summary">Hide the CameraV icon and name in launcher, show generic \"CV Settings\" instead</string>
+  <string name="prefs_block_screenshots">Block Screenshots</string>
+  <string name="prefs_block_screenshots_summary">Stop other apps and the Android system from taking screenshots of this app</string>
   <string name="light">Light</string>
   <string name="air_pressure">Air Pressure</string>
   <string name="orientation">Orientation</string>
   <string name="motion">Motion</string>
   <string name="camerav_hash_service">Verify Hash</string>
   <string name="app_name_alt">CV Settings</string>
+  <string name="wifi_networks">Wifi Networks</string>
+  <string name="gps_speed">GPS Speed</string>
+  <string name="gps_altitude">GPS Altitude</string>
+  <string name="remote_web_access_enabled_at">Remote web access enabled at</string>
+  <string name="remote_web_access_disabled">Remote web access disabled</string>
+  <string name="web_sharing">Web Sharing</string>
+  <string name="deactivate_web_share">Deactivate Web Share</string>
+  <string name="activate_web_share">Activate Web Share</string>
+  <string name="share_web_address">Share Web Address</string>
+  <string name="you_can_access_my_camerav_photos_and_videos_here_">You can access my CameraV photos and videos here: </string>
+  <string name="gps_accuracy">GPS Accuracy</string>
+  <string name="welcome_to_camerav_would_you_like_to_read_the_user_guide_">Welcome to CameraV. Would you like to read the user guide?</string>
+  <string name="menu_guide">View Guide</string>
 </resources>
