--- a/app/res/values-zh-rCN/strings.xml
+++ b/app/res/values-zh-rCN/strings.xml
@@ -103,7 +103,7 @@
   <string name="menu_creds">分享证书</string>
   <string name="menu_export_keys">备份密钥</string>
   <string name="menu_home_gallery_select_all">全选</string>
-  <string name="menu_remote_access">远程访问</string>
+  <string name="menu_remote_access">远程分享</string>
   <string name="wizard_welcome">欢迎！</string>
   <string name="wizard_choose_language">选择一个语言：</string>
   <string name="wizard_get_started">开始使用</string>
@@ -150,6 +150,8 @@
   <string name="filter_all">所有项目</string>
   <string name="filter_photos">仅照片</string>
   <string name="filter_videos">仅视频</string>
+  <string name="filter_encrypted">仅加密</string>
+  <string name="filter_external">仅外部</string>
   <string name="filter_tagged">已标签的项目</string>
   <string name="filter_shared">已分享的项目</string>
   <string name="panic_settings">紧急设置</string>
@@ -158,18 +160,30 @@
   <string name="panic_hint_wipe_content">向下滑动删除个人数据</string>
   <string name="panic_test_successful">干的不错！在真实场景中，您这样操作就会完成擦拭动作。</string>
   <string name="prefs_gps_highres">强制 GPS 高分辨率</string>
+  <string name="prefs_gps_highres_summary">确保您只从实际的 GPS 卫星网络获取位置数据</string>
   <string name="prefs_external_camera">使用外部相机应用</string>
+  <string name="prefs_external_camera_summary">只使用未加密的系统相机应用，不使用内置的加密相机</string>
   <string name="menu_alwayson">证明模式</string>
   <string name="_camerav_notarization_id_">#CameraV 公证</string>
   <string name="share_from_">分享从</string>
   <string name="_id_"> ID:</string>
-  <string name="prefs_export_local">共享时导出加密的媒体</string>
+  <string name="prefs_export_local">导出加密的媒体</string>
+  <string name="prefs_export_local_summary">分享它们时，首先在外部存储保存加密的媒体</string>
   <string name="prefs_run_foreground">保持应用在前台</string>
-  <string name="prefs_stealth_icon">使用 Alt 图标 (\"CV 设置\")</string>
+  <string name="prefs_run_foreground_summary">确保在您切换到另一个应用时本应用不会关闭</string>
+  <string name="prefs_stealth_icon">启用替代图标</string>
+  <string name="prefs_stealth_icon_summary">隐藏 CameraV 启动时的图标和名称，显示普通的“CV 设置”</string>
+  <string name="prefs_block_screenshots">阻止屏幕截图</string>
+  <string name="prefs_block_screenshots_summary">停止其他应用和 Android 系统拍摄本应用的屏幕截图</string>
   <string name="light">亮</string>
   <string name="air_pressure">空气压力</string>
   <string name="orientation">方向</string>
   <string name="motion">运动</string>
   <string name="camerav_hash_service">验证哈希</string>
   <string name="app_name_alt">CV 设置</string>
+  <string name="wifi_networks">Wifi 网络</string>
+  <string name="gps_speed">GPS 速度</string>
+  <string name="gps_altitude">GPS 海拔</string>
+  <string name="remote_web_access_enabled_at">远程网页访问启用于</string>
+  <string name="remote_web_access_disabled">远程网页访问已禁用</string>
 </resources>
