--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -48,7 +48,7 @@
   <string name="send_message">Enviar mensaje\u2026</string>
   <string name="notes">Notas</string>
   <string name="delete_tag">Eliminar etiqueta</string>
-  <string name="delete_audio_note">Borrar nota de audio</string>
+  <string name="delete_audio_note">Eliminar nota de audio</string>
   <string name="unverified">Sin verificar</string>
   <string name="verified">Verificado</string>
   <string name="pull_down_to_wipe">Presionar botón desplegable para eliminar su contenido</string>
@@ -60,19 +60,19 @@
   <string name="play">Reproducir</string>
   <string name="resend_credentials">Reenviar mis credenciales \u2026</string>
   <string name="retry">Reintentar</string>
-  <string name="your_media_is_being_encoded">Su audiovisual se está procesando...</string>
+  <string name="your_media_is_being_encoded">Su material multimedia se está procesando...</string>
   <string name="login_open">Abrir</string>
   <string name="login_passphrase">Frase-contraseña</string>
   <string name="preferences">Preferencias</string>
-  <string name="original_images_should_be">Las fotos capturadas y el vídeo debe almacenarse en:</string>
+  <string name="original_images_should_be">Las fotos capturadas y el vídeo deben almacenarse en el:</string>
   <string name="prefs_images_deleted">Almacenamiento cifrado (más lento)</string>
   <string name="prefs_images_saved">Almacenamiento estándar (más rápido)</string>
   <string name="prefs_lock_screen">Bloquear pantalla</string>
   <string name="prefs_lock_screen_on">Activo</string>
   <string name="prefs_lock_screen_off">Inactivo</string>
-  <string name="prefs_panic">Acción Pánico</string>
-  <string name="prefs_panic_wipe_app">Borrar la aplicación al completo</string>
-  <string name="prefs_panic_wipe_content">Borrar mi contenido</string>
+  <string name="prefs_panic">Acción de Pánico</string>
+  <string name="prefs_panic_wipe_app">Eliminar la aplicación al completo</string>
+  <string name="prefs_panic_wipe_content">Eliminar mi contenido</string>
   <string name="prefs_language_title">Idioma</string>
   <string name="pref_languages_default">Predeterminado del sistema</string>
   <string name="pref_languages_en_us">Inglés (EEUU)</string>
@@ -85,7 +85,7 @@
   <string name="pref_languages_si_LK">Cingalés (Sri Lanka)</string>
   <string name="pref_languages_tr_TR">Turco (Turquía)</string>
   <string name="menu_share">Compartir</string>
-  <string name="menu_share_media">Compartir audiovisual</string>
+  <string name="menu_share_media">Compartir material multimedia</string>
   <string name="menu_share_meta">Compartir metadatos</string>
   <string name="menu_share_meta_j3m">Compartir formato J3M JSON</string>
   <string name="menu_share_meta_csv">Compartir formato CSV</string>
@@ -99,34 +99,34 @@
   <string name="menu_lock">Bloquear aplicación</string>
   <string name="menu_view_meta">Metadatos</string>
   <string name="menu_view_charts">Gráficas</string>
-  <string name="menu_share_hash">Certificar</string>
-  <string name="menu_creds">Compartir Credenciales</string>
+  <string name="menu_share_hash">Constatar</string>
+  <string name="menu_creds">Compartir credenciales</string>
   <string name="menu_export_keys">Realizar copia de seguridad de las claves</string>
   <string name="menu_home_gallery_select_all">Seleccionar todo</string>
-  <string name="menu_remote_access">Acceso remoto</string>
+  <string name="menu_remote_access">Compartición remota</string>
   <string name="wizard_welcome">¡Bienvenido!</string>
   <string name="wizard_choose_language">Elija un idioma:</string>
   <string name="wizard_get_started">Comencemos</string>
   <string name="wizard_step_1_of_2">Paso 1 de 2:</string>
-  <string name="wizard_create_db">Configure su base de datos segura</string>
+  <string name="wizard_create_db">Configurar su base de datos segura</string>
   <string name="wizard_email_optional">Correo electrónico (opcional)</string>
   <string name="wizard_password_dont_match">Las contraseñas no coinciden =(</string>
-  <string name="wizard_password_wrong_format">Su contraseña debe ser de más de 10 caracteres.</string>
-  <string name="wizard_ok_next">De acuerdo, siguiente</string>
+  <string name="wizard_password_wrong_format">Su contraseña debe tener más de 10 caracteres.</string>
+  <string name="wizard_ok_next">Correcto, siguiente</string>
   <string name="wizard_step_2_of_2">Paso 2 de 2:</string>
-  <string name="wizard_take_photo_title">Tome 6 fotos monótonas (una superficie) para generar su clave de dispositivo.</string>
-  <string name="wizard_key_information">Su clave le permitirá verificarse, de forma que pueda compartir sin obstáculos y de forma segura.</string>
+  <string name="wizard_take_photo_title">Tome 6 fotos monótonas (una superficie) para generar la clave de su dispositivo.</string>
+  <string name="wizard_key_information">Su clave le permitirá ser verificado, de forma que pueda compartir sin obstáculos y de forma segura.</string>
   <string name="wizard_take_photo">Tomar fotos</string>
-  <string name="wizard_take_photo_take">Tomar</string>
+  <string name="wizard_take_photo_take">Disparar</string>
   <string name="wizard_key_is_being_made">Su clave se está construyendo, esto puede llevar un rato.</string>
   <string name="wizard_key_made">Su clave ha sido construida.</string>
   <string name="home_audio_note">NOTA DE AUDIO</string>
   <string name="home_share">COMPARTIR</string>
   <string name="home_gallery_title">Galería</string>
-  <string name="home_gallery_selected">%1$d Seleccionada</string>
+  <string name="home_gallery_selected">%1$d seleccionada(s)</string>
   <string name="home_gallery_delete">Borrar</string>
   <string name="home_gallery_empty">Su galería está vacía.</string>
-  <string name="home_swipe_for_more">Gesto de barrido para ver más</string>
+  <string name="home_swipe_for_more">Arrastre para ver más</string>
   <string name="editor_tags_form">Añadir información</string>
   <string name="editor_tags_add">Añadir etiquetas</string>
   <string name="editor_form_edit">Información de la etiqueta</string>
@@ -138,7 +138,7 @@
   <string name="editor_history_exported">Compartida de forma segura</string>
   <string name="audio_saved_saved">Grabación guardada.</string>
   <string name="audio_saved_info">Las notas de audio son sólo para su referencia, y no se compartirán.</string>
-  <string name="audio_saved_ok">¡DE ACUERDO, GRACIAS!</string>
+  <string name="audio_saved_ok">¡CORRECTO, GRACIAS!</string>
   <string name="shared_never">Nunca compartidas</string>
   <string name="shared_recently">Compartida hace menos de un minuto</string>
   <string name="shared_minutes">Compartida hace %1$d minutos</string>
@@ -150,12 +150,40 @@
   <string name="filter_all">Todos los elementos</string>
   <string name="filter_photos">Sólo fotos</string>
   <string name="filter_videos">Sólo vídeos</string>
+  <string name="filter_encrypted">Sólo cifrado</string>
+  <string name="filter_external">Sólo externo</string>
   <string name="filter_tagged">Elementos etiquetados</string>
   <string name="filter_shared">Elementos compartidos</string>
-  <string name="panic_settings">Configuración de Pánico</string>
+  <string name="panic_settings">Configuraciones de Pánico</string>
   <string name="panic_cancel">Cancelar</string>
-  <string name="panic_hint">Gesto de barrido hacia abajo para borrar la aplicación</string>
-  <string name="panic_hint_wipe_content">Gesto de barrido hacia abajo para borrar datos personales</string>
-  <string name="panic_test_successful">¡Buen trabajo! En un escenario real, habría completado con éxito un barrido.</string>
+  <string name="panic_hint">Arrastre hacia abajo para borrar la aplicación</string>
+  <string name="panic_hint_wipe_content">Arrastre hacia abajo para borrar datos personales</string>
+  <string name="panic_test_successful">¡Buen trabajo! En un escenario real, habría completado con éxito una limpieza.</string>
   <string name="prefs_gps_highres">Forzar GPS de Alta-Resolución</string>
+  <string name="prefs_gps_highres_summary">Se asegura de que sólo obtiene los datos de ubicación de la verdadera red de satélites GPS.</string>
+  <string name="prefs_external_camera">Usar aplicaciones de cámara externas</string>
+  <string name="prefs_external_camera_summary">Usa sólo las aplicaciones de cámaras del sistema no cifradas, y no la cámara cifrada incorporada.</string>
+  <string name="menu_alwayson">Modo de prueba</string>
+  <string name="_camerav_notarization_id_">Constatación de #CameraV</string>
+  <string name="share_from_">Compartir desde</string>
+  <string name="_id_">Identificación:</string>
+  <string name="prefs_export_local">Exportar audiovisual cifrado</string>
+  <string name="prefs_export_local_summary">Guardar primero audiovisuales cifrados en el almacenamiento externo cuando los comparta</string>
+  <string name="prefs_run_foreground">Mantener la aplicación en primer plano</string>
+  <string name="prefs_run_foreground_summary">Se asegura de que la aplicación no se está cerrando cuando cambie a otra aplicación</string>
+  <string name="prefs_stealth_icon">Habilitar icono alternativo</string>
+  <string name="prefs_stealth_icon_summary">Oculta el icono de CameraV y el nombre en el lanzador, muestra el genérico \"Configuración de CV\" en su lugar</string>
+  <string name="prefs_block_screenshots">Bloquear capturas de pantalla</string>
+  <string name="prefs_block_screenshots_summary">Inhibe a otras aplicaciones y al sistema Android de tomar capturas de pantalla de esta aplicación.</string>
+  <string name="light">Luz</string>
+  <string name="air_pressure">Presión del aire</string>
+  <string name="orientation">Orientación</string>
+  <string name="motion">Movimiento</string>
+  <string name="camerav_hash_service">Verificar identificador criptográfico (hash)</string>
+  <string name="app_name_alt">Configuración de CV</string>
+  <string name="wifi_networks">Redes wifi</string>
+  <string name="gps_speed">Velocidad del GPS</string>
+  <string name="gps_altitude">Altitud del GPS</string>
+  <string name="remote_web_access_enabled_at">Acceso web remoto habilitado en</string>
+  <string name="remote_web_access_disabled">Acceso web remoto deshabilitado</string>
 </resources>
